--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-native",
     "glamorous"
   ],
-  "author": "",
+  "author": "Atticus White <atticus@robinpowered.com> (https://robinpowered.com/)",
   "license": "MIT",
   "jest": {
     "preset": "jest-react-native",
