fix(react-native-elements): support earlier versions of react native
Earlier versions of react native don't support new FlatList and SectionList. This lowers the
dependency version of React Native and tests if problematic components exist

closes #25

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     ]
   },
   "peerDependencies": {
-    "react": ">=15.4.0 || >=16.0.0-alpha.6",
-    "react-native": ">=0.40"
+    "react": ">=0.14.5 || >=16.0.0-alpha.6",
+    "react-native": "^0.14.0"
   },
   "devDependencies": {
     "babel-preset-react-native": "^1.9.2",
