fix(package): use >= instead of caret for 0.x peer deps
0.x versions are treated differently by semver, such that
semver.satisfies('0.15.0', '^0.14.0') // false
semver.satisfies('1.15.0', '^1.15.0') // false

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "peerDependencies": {
     "react": ">=0.14.5 || >=16.0.0-alpha.6",
-    "react-native": "^0.14.0"
+    "react-native": ">=0.14.0 && < 1"
   },
   "devDependencies": {
     "babel-preset-react-native": "^1.9.2",
