Consume PropTypes from the prop-types module
This ensures compatibility with React 16+.

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "semantic-release": "^6.3.6"
   },
   "dependencies": {
-    "brcast": "^2.0.0"
+    "brcast": "^2.0.0",
+    "prop-types": "^15.5.10"
   },
   "eslintConfig": {
     "extends": [
