--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-jsdom": "^3.1.5",
     "nps": "^5.1.0",
     "nps-utils": "^1.2.0",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.6",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
@@ -55,8 +56,7 @@
     "semantic-release": "^6.3.6"
   },
   "dependencies": {
-    "brcast": "^2.0.0",
-    "prop-types": "^15.5.10"
+    "brcast": "^2.0.0"
   },
   "eslintConfig": {
     "extends": [
