--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.2",
   "description": "React glamorous library for React Native",
   "main": "src/index.js",
+  "typings": "typings/glamorous.d.ts",
   "scripts": {
     "start": "nps",
     "test": "nps test"
@@ -16,16 +17,14 @@
     "css-in-js",
     "cssinjs"
   ],
-  "author": "Atticus White <atticus@robinpowered.com> (https://robinpowered.com/)",
+  "author":
+    "Atticus White <atticus@robinpowered.com> (https://robinpowered.com/)",
   "license": "MIT",
   "jest": {
     "preset": "jest-react-native",
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/examples/"
-    ]
+    "testPathIgnorePatterns": ["/node_modules/", "/examples/"]
   },
   "peerDependencies": {
     "react": ">=0.14.5 || >=16.0.0-alpha.6",
