--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.2",
   "description": "React glamorous library for React Native",
   "main": "src/index.js",
-  "typings": "typings/glamorous.d.ts",
+  "types": "./typings/glamorous.d.ts",
   "scripts": {
     "start": "nps",
     "test": "nps test"
