--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glamorous-native",
-  "version": "1.4.2",
+  "version": "2.0.0",
   "description": "React glamorous library for React Native",
   "main": "src/index.js",
   "types": "./typings/glamorous.d.ts",
@@ -17,14 +17,16 @@
     "css-in-js",
     "cssinjs"
   ],
-  "author":
-    "Atticus White <atticus@robinpowered.com> (https://robinpowered.com/)",
+  "author": "Atticus White <atticus@robinpowered.com> (https://robinpowered.com/)",
   "license": "MIT",
   "jest": {
     "preset": "jest-react-native",
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
-    "testPathIgnorePatterns": ["/node_modules/", "/examples/"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/examples/"
+    ]
   },
   "peerDependencies": {
     "react": ">=0.14.5 || >=16.0.0-alpha.6",
